add correction to slideshow

--- a/OwnProjectsAndTests/hjemmesideTilAgnesv2/resources/CSS/style.css
+++ b/OwnProjectsAndTests/hjemmesideTilAgnesv2/resources/CSS/style.css
@@ -337,6 +337,10 @@ body {
   .mySlides {
     background-color: darkturquoise;
   }
+
+  .column {
+    cursor: pointer;
+  }
 /* slideshow stop */
 
 /* media query for blue boxes on phones and some tablets */
