--- a/OwnProjectsAndTests/amrcGamleSideUdkast/hjemmesideTilAgnesv2/resources/CSS/style.css
+++ b/OwnProjectsAndTests/amrcGamleSideUdkast/hjemmesideTilAgnesv2/resources/CSS/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+AU+QLD:wght@100..400&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 /* general css declarations */
 body {
@@ -7,7 +9,11 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    /*
     font-family: "Playwrite AU QLD", cursive;
+    */
+    font-family: "Montserrat";
+    font-weight: 100;
 }
 
 /* header declerations */
