try to add border

--- a/OwnProjectsAndTests/hjemmesideTilAmrc/resources/CSS/style.css
+++ b/OwnProjectsAndTests/hjemmesideTilAmrc/resources/CSS/style.css
@@ -133,6 +133,8 @@ img {
 video {
     width: 88%;
     height: auto;
+    background-color: black;
+    border: solid 1px gray;
 }
 
 #hvemErJegDiv {
