try to add responsive design and add comment with next steps

--- a/OwnProjectsAndTests/hjemmesideTilAmrc/resources/CSS/style.css
+++ b/OwnProjectsAndTests/hjemmesideTilAmrc/resources/CSS/style.css
@@ -1,5 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
+
+/* 
+
+only missing 4 things 
+
+missing menu button
+
+missing a video (awaiting one)
+
+missing last text and lat pictures (awaiting)
+
+missing being on a real website (awaiting go sign and that the domain gets bought)
+
+*/
+
 body {
     background-color: rgb(244, 250, 255);
     font-family: "EB Garamond", serif;
