--- a/OwnProjectsAndTests/hjemmesideTilAmrc/resources/CSS/style.css
+++ b/OwnProjectsAndTests/hjemmesideTilAmrc/resources/CSS/style.css
@@ -461,12 +461,15 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-
-  .column2 {
     width: 11.11%;
   }
 /* slideshow stop */
+
+@media only screen and (max-width: 1000px) {
+  .column2 {
+    width: 33.333%;
+  }
+}
 
 
 
