evt lav udkast til amrc website med header

--- a/OwnProjectsAndTests/hjemmesideTilAmrcMedFølgendeHeader/resources/CSS/style.css
+++ b/OwnProjectsAndTests/hjemmesideTilAmrcMedFølgendeHeader/resources/CSS/style.css
@@ -23,6 +23,13 @@ body {
   color: black;
 }
 
+.anchor {
+  display: block;
+  position: relative;
+  top: -55px;
+  visibility: hidden;
+}
+
 /*
 header {
   height: 100px;
