--- a/OwnProjectsAndTests/hjemmesideTilAmrcMedFølgendeHeader/resources/CSS/style.css
+++ b/OwnProjectsAndTests/hjemmesideTilAmrcMedFølgendeHeader/resources/CSS/style.css
@@ -40,7 +40,10 @@ header {
 header {
   position: fixed;
   width: 100%;
-  background-color: #333;
+  /*
+      background-color: #333;
+  */
+  background-color:rgb(255, 255, 135);
   color: #fff;
   padding: 30px;
   z-index: 10;
