--- a/OwnProjectsAndTests/hjemmesideTilAmrcMedFølgendeHeader copy/resources/CSS/style.css
+++ b/OwnProjectsAndTests/hjemmesideTilAmrcMedFølgendeHeader copy/resources/CSS/style.css
@@ -40,7 +40,10 @@ header {
 header {
   position: fixed;
   width: 100%;
+  /*
   background-color: rgb(244, 250, 255);
+  */
+  background-color: #00BCD4;
   color: black;
   padding: 30px;
   z-index: 10;
