--- a/OwnProjectsAndTests/hjemmesideTilAmrcMedFølgendeHeader copy/resources/CSS/style.css
+++ b/OwnProjectsAndTests/hjemmesideTilAmrcMedFølgendeHeader copy/resources/CSS/style.css
@@ -43,7 +43,7 @@ header {
   /*
   background-color: rgb(244, 250, 255);
   */
-  background-color: #00BCD4;
+  background-color: rgb(35, 35, 107);
   color: black;
   padding: 30px;
   z-index: 10;
