--- a/OwnProjectsAndTests/hjemmesideTilAmrc/resources/CSS/style.css
+++ b/OwnProjectsAndTests/hjemmesideTilAmrc/resources/CSS/style.css
@@ -23,18 +23,51 @@ body {
   color: black;
 }
 
+.anchor {
+  display: block;
+  position: relative;
+  top: -55px;
+  visibility: hidden;
+}
+
+/*
+header {
+  height: 100px;
+}
+*/
+
+header {
+  position: fixed;
+  width: 100%;
+  /*
+  background-color: rgb(244, 250, 255);
+  */
+  background-color: rgb(208, 221, 232);
+  color: black;
+  padding: 30px;
+  z-index: 10;
+  border-bottom: solid 2px black;
+} 
+
+.menuButton2 {
+  position: absolute;
+  top: -15px;
+  right: 18px;
+  font-size: 60px;
+}
+
+main {
+  margin-top: 100px; 
+}
+
 
 /* menu start */
 
 .menuButton {
   position: absolute;
-  top: 20px;
-  right: 45px;
+  top: -15px;
+  right: 10px;
   font-size: 60px;
-}
-
-.menuDivTest {
-  height: 100px;
 }
 
 .overlay {
@@ -104,8 +137,8 @@ body {
 #title {
     border: solid 4px black;
     padding: 0px 10px 0px 10px;
-    margin: 28px 0rem 0.5rem 0rem;
-    background-color: rgb(244, 250, 255);;
+    margin: 100px 0rem 0.5rem 0rem;
+    background-color: rgb(244, 250, 255);
 }
 
 #title h1 {
