--- a/OwnProjectsAndTests/hjemmesideTilAmrc/resources/CSS/style.css
+++ b/OwnProjectsAndTests/hjemmesideTilAmrc/resources/CSS/style.css
@@ -74,7 +74,7 @@ main {
   height: 0%;
   width: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   top: 0;
   left: 0;
   background-color: rgb(0,0,0);
@@ -361,7 +361,7 @@ body {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
+    padding-top: 180px;
     left: 0;
     top: 0;
     width: 100%;
@@ -384,7 +384,10 @@ body {
   .close {
     color: white;
     position: absolute;
-    top: 10px;
+    /*
+    top: 10px
+    */
+    top: 110px;
     right: 25px;
     font-size: 35px;
     font-weight: bold;
